class dependent loss result

--- a/experiments/cifar/cifar10-CD.ipynb
+++ b/experiments/cifar/cifar10-CD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -100,25 +100,25 @@
       "('Positive (pct_missing=0.8):', 225000, ' vs.', 44603)\n",
       "('Positive (pct_missing=0.9):', 225000, ' vs.', 22458)\n",
       "('Positive (pct_missing=1.0):', 225000, ' vs.', 0)\n",
-      "class_weight [ 0.18242183  1.97394394  1.98176774  2.00320513  2.00400802  1.95083886\n",
-      "  2.02511138  2.00481155  1.99760288  1.98807157]\n"
+      "class_weight None\n"
      ]
     }
    ],
    "source": [
     "pct_missing = 0.5\n",
     "y_train_pu = synthesize_pu_labels(y_train, random_state=42, verbose=True)\n",
+    "\n",
     "from sklearn.utils import class_weight\n",
     "y_train_enc = y_train_pu[pct_missing]\n",
     "y_train_dec = np.argmax(y_train_enc, axis=1)\n",
-    "class_weight = class_weight.compute_class_weight('balanced', np.unique(y_train_dec), y_train_dec)\n",
-    "# class_weight[0] = class_weight[0] * pct_missing\n",
+    "# class_weight = class_weight.compute_class_weight('balanced', np.unique(y_train_dec), y_train_dec)\n",
+    "class_weight = None\n",
     "print('class_weight', class_weight)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -198,20 +198,21 @@
     "    model = load_model(checkpoint)\n",
     "\n",
     "optimizer = keras.optimizers.Adam(lr=1e-4)\n",
-    "model.compile(loss='categorical_crossentropy',\n",
+    "from pulearn.losses.keras_losses import unlabelled_exponential_loss\n",
+    "model.compile(loss=unlabelled_exponential_loss,\n",
     "              optimizer=optimizer,\n",
     "              metrics=['accuracy'])\n",
     "model.summary()\n",
     "\n",
     "\n",
     "checkpointer = ModelCheckpoint(\n",
-    "    filepath=\"model_checkpoint_{}_wu_{}.h5\".format(title, pct_missing),\n",
+    "    filepath=\"model_checkpoint_{}_cd_{}.h5\".format(title, pct_missing),\n",
     "    verbose=1,\n",
     "    save_best_only=True)\n",
     "\n",
     "\n",
     "csv_logger = CSVLogger(\n",
-    "    'csv_logger_{}_wu_{}.csv'.format(title, pct_missing))\n",
+    "    'csv_logger_{}_cd_{}.csv'.format(title, pct_missing))\n",
     "\n",
     "\n",
     "early_stopper = EarlyStopping(monitor='val_loss',\n",
@@ -240,7 +241,7 @@
      "text": [
       "Using real-time data augmentation.\n",
       "Epoch 1/50\n",
-      " 44/781 [>.............................] - ETA: 15s - loss: 0.9851 - acc: 0.5614 \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b"
+      " 11/781 [..............................] - ETA: 118s - loss: 0.8968 - acc: 0.5469 \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b"
      ]
     }
    ],
@@ -294,7 +295,7 @@
     "                        validation_data=(x_test, y_test),\n",
     "                        class_weight=class_weight,\n",
     "                        callbacks=[csv_logger, checkpointer, early_stopper])\n",
-    "    model.save('{}_wu_{}.h5'.format(title, pct_missing))"
+    "    model.save('{}_cd_{}.h5'.format(title, pct_missing))"
    ]
   },
   {
