--- a/experiments/cifar/cifar10.ipynb
+++ b/experiments/cifar/cifar10.ipynb
@@ -3,11 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -48,10 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# CIFAR10"
    ]
@@ -60,9 +53,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -79,11 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -333,12 +320,12 @@
     "    model = WideResidualNetwork(depth=28, width=10, dropout_rate=0.3,\n",
     "                                classes=num_classes, include_top=True,\n",
     "                                weights=None)\n",
-    "    sgd = keras.optimizers.SGD(lr=0.1,\n",
-    "                         decay=5e-4,\n",
-    "                         momentum=0.9,\n",
-    "                         nesterov=True)\n",
+    "#     sgd = keras.optimizers.SGD(lr=0.1,\n",
+    "#                          decay=5e-4,\n",
+    "#                          momentum=0.9,\n",
+    "#                          nesterov=True)\n",
     "    model.compile(loss='categorical_crossentropy',\n",
-    "              optimizer=sgd,\n",
+    "              optimizer='adam',\n",
     "              metrics=['accuracy'])\n",
     "if checkpoint is not None:\n",
     "    model = load_model(checkpoint)\n",
@@ -352,9 +339,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -383,11 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -454,9 +435,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": []
