Update cifar110 training

--- a/experiments/cifar/cifar110-PU.ipynb
+++ b/experiments/cifar/cifar110-PU.ipynb
@@ -762,7 +762,277 @@
      "output_type": "stream",
      "text": [
       "Epoch 27/200\n",
-      "100/781 [==>...........................] - ETA: 36s - loss: 0.7033 - acc: 0.7491"
+      "780/781 [============================>.] - ETA: 0s - loss: 0.7016 - acc: 0.7467Epoch 00026: val_loss did not improve\n",
+      "781/781 [==============================] - 45s - loss: 0.7019 - acc: 0.7466 - val_loss: 0.9424 - val_acc: 0.5739\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3e06dbe585cc4d7c9825181fb4f534e2"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 28/200\n",
+      "780/781 [============================>.] - ETA: 0s - loss: 0.7008 - acc: 0.7472Epoch 00027: val_loss did not improve\n",
+      "781/781 [==============================] - 45s - loss: 0.7007 - acc: 0.7473 - val_loss: 0.9444 - val_acc: 0.5957\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8a08cee3f95049d9ad1e3707bac370d2"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 29/200\n",
+      "780/781 [============================>.] - ETA: 0s - loss: 0.7019 - acc: 0.7485Epoch 00028: val_loss did not improve\n",
+      "781/781 [==============================] - 45s - loss: 0.7018 - acc: 0.7485 - val_loss: 0.9433 - val_acc: 0.5864\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5022ba157b5d498997cd5df012d5907c"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 30/200\n",
+      "780/781 [============================>.] - ETA: 0s - loss: 0.7007 - acc: 0.7469Epoch 00029: val_loss did not improve\n",
+      "781/781 [==============================] - 45s - loss: 0.7007 - acc: 0.7469 - val_loss: 0.9453 - val_acc: 0.5552\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "86a669a60b2a4a94bca6889a5c3345db"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 31/200\n",
+      "780/781 [============================>.] - ETA: 0s - loss: 0.6988 - acc: 0.7476Epoch 00030: val_loss did not improve\n",
+      "781/781 [==============================] - 45s - loss: 0.6985 - acc: 0.7477 - val_loss: 0.9569 - val_acc: 0.5927\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "99fe5c28f3bf446aadfe31ac72a51e43"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 32/200\n",
+      "780/781 [============================>.] - ETA: 0s - loss: 0.6979 - acc: 0.7485Epoch 00031: val_loss did not improve\n",
+      "781/781 [==============================] - 60s - loss: 0.6978 - acc: 0.7485 - val_loss: 0.9285 - val_acc: 0.5647\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "74d94f594cfb4e65a2566e6456765b3d"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 33/200\n",
+      "780/781 [============================>.] - ETA: 0s - loss: 0.6985 - acc: 0.7473Epoch 00032: val_loss did not improve\n",
+      "781/781 [==============================] - 82s - loss: 0.6985 - acc: 0.7473 - val_loss: 0.9673 - val_acc: 0.5918\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "66486cb94a2c467ab7ccf89d9234aaf8"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 34/200\n",
+      "780/781 [============================>.] - ETA: 0s - loss: 0.6981 - acc: 0.7472Epoch 00033: val_loss improved from 0.92020 to 0.88640, saving model to model_checkpoint_cifar110_vgg8_pu_0.5.h5\n",
+      "781/781 [==============================] - 54s - loss: 0.6982 - acc: 0.7471 - val_loss: 0.8864 - val_acc: 0.6440\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bccf9bc595694aa9814b8bbe35368020"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 35/200\n",
+      "780/781 [============================>.] - ETA: 0s - loss: 0.6978 - acc: 0.7483Epoch 00034: val_loss did not improve\n",
+      "781/781 [==============================] - 45s - loss: 0.6978 - acc: 0.7483 - val_loss: 0.9183 - val_acc: 0.6059\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3a69996145b64b75bda7ab92baef9b5e"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 36/200\n",
+      "780/781 [============================>.] - ETA: 0s - loss: 0.6997 - acc: 0.7456Epoch 00035: val_loss did not improve\n",
+      "781/781 [==============================] - 45s - loss: 0.6997 - acc: 0.7456 - val_loss: 0.9844 - val_acc: 0.5491\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f734a08b1bb2479691b1ea11edc6d6e9"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 37/200\n",
+      "780/781 [============================>.] - ETA: 0s - loss: 0.6981 - acc: 0.7461Epoch 00036: val_loss did not improve\n",
+      "781/781 [==============================] - 45s - loss: 0.6981 - acc: 0.7461 - val_loss: 0.9452 - val_acc: 0.5913\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "79a71b94bb1a4ea1bd1ad469baf043b8"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 38/200\n",
+      "780/781 [============================>.] - ETA: 0s - loss: 0.6993 - acc: 0.7481Epoch 00037: val_loss did not improve\n",
+      "781/781 [==============================] - 45s - loss: 0.6990 - acc: 0.7482 - val_loss: 0.9543 - val_acc: 0.5642\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c37703b9d6824e508812f3ec7dbe4cde"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 39/200\n",
+      "780/781 [============================>.] - ETA: 0s - loss: 0.6957 - acc: 0.7478Epoch 00038: val_loss did not improve\n",
+      "781/781 [==============================] - 45s - loss: 0.6957 - acc: 0.7478 - val_loss: 0.9362 - val_acc: 0.5920\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c3173db53c2240ed8d375f879497d968"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 40/200\n",
+      "780/781 [============================>.] - ETA: 0s - loss: 0.6962 - acc: 0.7489Epoch 00039: val_loss did not improve\n",
+      "781/781 [==============================] - 45s - loss: 0.6963 - acc: 0.7489 - val_loss: 0.9485 - val_acc: 0.5951\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6c372e0ff73041519cdf85ae4f30cb2e"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 41/200\n",
+      "780/781 [============================>.] - ETA: 0s - loss: 0.6951 - acc: 0.7473Epoch 00040: val_loss did not improve\n",
+      "781/781 [==============================] - 79s - loss: 0.6950 - acc: 0.7474 - val_loss: 0.9302 - val_acc: 0.5945\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ead737a4dda2420c81866f5afb82f47d"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 42/200\n",
+      "336/781 [===========>..................] - ETA: 47s - loss: 0.7061 - acc: 0.7431"
      ]
     }
    ],
