archive expr. logs

--- a/experiments/cifar/evaluate.ipynb
+++ b/experiments/cifar/evaluate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -100,9 +100,9 @@
      "text": [
       "['logs/round1/prediction_cifar110_vgg8.csv']\n",
       "       acc        f1  label    method  pct_missing      prec       rec  split\n",
-      "0  0.90655  0.892779   true  complete          0.5  0.929700  0.865649  train\n",
-      "1  0.72402  0.619262  label  complete          0.5  0.510247  0.840993  train\n",
-      "2  0.86665  0.841869   true  complete          0.5  0.888834  0.810482   test\n"
+      "0  0.90655  0.892779   true  complete          0.0  0.929700  0.865649  train\n",
+      "1  0.72402  0.619262  label  complete          0.0  0.510247  0.840993  train\n",
+      "2  0.86665  0.841869   true  complete          0.0  0.888834  0.810482   test\n"
      ]
     }
    ],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -136,20 +136,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['logs/round1/prediction_cifar110_vgg8_wu_0.0.csv']\n",
+      "['logs/round2/prediction_cifar110_vgg8_pu_0.5.csv', 'logs/round3/prediction_cifar110_vgg8_pu_0.5.csv']\n",
       "       acc        f1  label method  pct_missing      prec       rec  split\n",
-      "0  0.90281  0.895830   true     wu          0.0  0.873434  0.922095  train\n",
-      "1  0.90281  0.895830  label     wu          0.0  0.873434  0.922095  train\n",
-      "2  0.84200  0.818978   true     wu          0.0  0.806643  0.835618   test\n"
+      "0  0.67825  0.531185   true     pu          0.5  0.953374  0.417831  train\n",
+      "1  0.78125  0.510123  label     pu          0.5  0.618192  0.469572  train\n",
+      "2  0.66105  0.497196   true     pu          0.5  0.941629  0.388309   test\n",
+      "3  0.67496  0.529849   true     pu          0.5  0.950470  0.411865  train\n",
+      "4  0.79361  0.534090  label     pu          0.5  0.639168  0.486366  train\n",
+      "5  0.65400  0.486697   true     pu          0.5  0.938322  0.375082   test\n"
      ]
     }
    ],
    "source": [
     "dataset = 'cifar110'\n",
     "model = 'vgg8'\n",
-    "method = 'wu'\n",
-    "pct_missing = 0.\n",
-    "rounds = ['round1']\n",
+    "method = 'pu'\n",
+    "pct_missing = 0.5\n",
+    "rounds = ['round1','round2','round3']\n",
+    "rounds = ['round2','round3']\n",
     "# rounds = ['round2', 'round3', 'round4', 'round5','round6','round7','round8']\n",
     "predictions = [\n",
     "    'logs/{}/prediction_{}_{}_{}_{}.csv'.format(rnd, dataset, model, method, pct_missing)\n",
@@ -164,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -175,29 +179,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "acc            0.814679\n",
-      "f1             0.774935\n",
+      "acc            0.657525\n",
+      "f1             0.491947\n",
       "pct_missing    0.500000\n",
-      "prec           0.854365\n",
-      "rec            0.723831\n",
+      "prec           0.939976\n",
+      "rec            0.381695\n",
       "dtype: float64\n",
-      "acc            0.006465\n",
-      "f1             0.010815\n",
+      "acc            0.004985\n",
+      "f1             0.007423\n",
       "pct_missing    0.000000\n",
-      "prec           0.025820\n",
-      "rec            0.027026\n",
+      "prec           0.002338\n",
+      "rec            0.009353\n",
       "dtype: float64\n",
-      "acc            0.858626\n",
-      "f1             0.835764\n",
+      "acc            0.676605\n",
+      "f1             0.530517\n",
       "pct_missing    0.500000\n",
-      "prec           0.899752\n",
-      "rec            0.790927\n",
+      "prec           0.951922\n",
+      "rec            0.414848\n",
       "dtype: float64\n",
-      "acc            0.010949\n",
-      "f1             0.016565\n",
+      "acc            0.002326\n",
+      "f1             0.000945\n",
       "pct_missing    0.000000\n",
-      "prec           0.014721\n",
-      "rec            0.036990\n",
+      "prec           0.002054\n",
+      "rec            0.004218\n",
       "dtype: float64\n"
      ]
     }
@@ -296,6 +300,37 @@
     "print(dfeval[dfeval['split']=='test'].std())\n",
     "print(dfeval[(dfeval['split']=='train') & (dfeval['label']=='true')].mean())\n",
     "print(dfeval[(dfeval['split']=='train') & (dfeval['label']=='true')].std())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       acc        f1  label method  pct_missing      prec       rec  split\n",
+      "0  0.67496  0.529849   true     pu          0.5  0.950470  0.411865  train\n",
+      "1  0.79361  0.534090  label     pu          0.5  0.639168  0.486366  train\n",
+      "2  0.65400  0.486697   true     pu          0.5  0.938322  0.375082   test\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset = 'cifar110'\n",
+    "model = 'vgg8'\n",
+    "method = 'pu'\n",
+    "pct_missing = 0.5\n",
+    "predictions = ['prediction_{}_{}_{}_{}.csv'.format(dataset, model, method, pct_missing)]\n",
+    "records = process(predictions)\n",
+    "dfeval = pd.DataFrame(records)\n",
+    "print(dfeval)"
    ]
   },
   {
